# crust-lite

./: .gitignore  CONCERNS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: east_japan_usgs.yml  japan_all_domestic.yml  japan_all_usgs_long.yml  japan_all_usgs_modern_m2.yml  kumamoto.yml  kumamoto_usgs.yml  noto.yml  noto_usgs.yml
data/raw/active_faults/: japan_major_active_faults_coarse_seed.geojson
data/raw/jshis/: sample_jshis.json
data/raw/sample/: sample_events.csv  sample_gnss_daily.csv  sample_known_faults.geojson  sample_mechanisms.csv  sample_waveform_spectra.csv
docs/: concerns.md  profiling_gpu_plan.md  runpod_api_notes.md
notebooks/: 03_stress_and_simulation.ipynb
scripts/: bootstrap_deps.sh  bootstrap_workspace.sh  collect_fdsn_waveform_spectra.py  collect_gcmt_mechanisms.py  collect_hinet_catalog.py  collect_hinet_waveforms.py  collect_usgs_catalog.py  collect_usgs_mechanisms.py  h200_preflight.sh  h200_prepare.sh  h200_run.sh  merge_waveform_csv.py  merge_waveforms_for_config.sh  prepare_after_waveforms.sh  validate_workspace.sh  workspace_env.sh
secrets/: hinet.env.template
src/crust_lite/: __init__.py  cli.py  config.py  geo.py  logging.py  paths.py  report.py  resources.py
src/crust_lite/data_sources/: __init__.py  active_faults.py  domestic.py  events.py  gnss.py  jshis.py  mechanisms.py  waveforms.py
tests/: helpers.py  test_array_projection.py  test_config.py  test_domestic_ingest.py  test_fault_inference.py  test_run_all_and_3d.py  test_scoring.py  test_simulation.py
(+26 files in other folders)
